# Space-Carving

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: bg_constraints_carving.cpp  bg_constraints_carving.h  carving.cpp  carving.h  extract_contour _1.0.cpp  extract_contour.cpp  extract_contour.h  fileio.cpp  fileio.h  pc_constraint_carving.cpp  pc_constraint_carving.h  show3d.cpp  show3d.h
